--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
 	"name": "mern-infrastructure",
 	"version": "0.1.0",
 	"private": true,
+	"homepage": "https://hmgraves.github.io/Portfolio/",
 	"dependencies": {
+		"predeploy": "npm run build",
+		"deploy": "gh-pages -d build",
 		"@emailjs/browser": "^3.6.2",
 		"@testing-library/jest-dom": "^5.15.0",
 		"@testing-library/react": "^11.2.7",
@@ -46,5 +49,8 @@
 			"last 1 safari version"
 		]
 	},
-	"proxy": "http://localhost:3001"
+	"proxy": "http://localhost:3001",
+	"devDependencies": {
+		"gh-pages": "^3.2.3"
+	}
 }
